# doobs-mpris

./: Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yaml
examples/: enumerate.rs  list.rs  player.rs
src/: bindings.rs  enumerator.rs  error.rs  lib.rs  media_player.rs  metadata.rs  player.rs  playlists.rs  track_list.rs
src/binding/: media_player.rs  mod.rs  player.rs  playlists.rs  track_list.rs
src/bindings/: player.rs  playlist.rs  track_list.rs
src/playlists/: id.rs  ordering.rs  playlist.rs
src/types/: duration.rs  loop_status.rs  metadata.rs  mod.rs  playback_status.rs  playlist.rs  playlist_id.rs  playlist_ordering.rs  track.rs  track_id.rs
