[package]
name = "doobs-mpris"
description = "zbus-based bindings for MPRIS2 (Media Player Remote Interfacing Specification) on Linux"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
futures-util = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
jiff = "0.2"
zbus = "5.14.0"
zvariant = "5.10.0"

[dev-dependencies]
miette = { version = "7.6", features = ["fancy"] }
tokio = { version = "1", features = ["full"] }
