[package]
name = "doobs-mpris"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
readme = "README.md"
description = "zbus-based bindings for MPRIS2 (Media Player Remote Interfacing Specification) on Linux"
repository = "https://github.com/teatwig/doobs-mpris"
keywords = ["mpris", "zbus", "dbus", "api-bindings"]
categories = ["os::unix-apis"]

[dependencies]
futures-util = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
jiff = "0.2"
zbus = "5.14.0"
zvariant = "5.10.0"

[dev-dependencies]
miette = { version = "7.6", features = ["fancy"] }
tokio = { version = "1", features = ["full"] }
